# gauss

./: .gitignore  .stylish-haskell.yaml  LICENSE  Makefile  README.md  gauss.cabal  package.yaml  stack.yaml
app/: Main.hs  Polly.hs
bench/: Bench.hs
src/: Dev.hs  Examples.hs  Gauss.hs  Lib.hs  Paths_gauss.hs  Prelude.hs  SimulatedAnnealing.hs
src/Gauss/: Argument.hs  Expressions.hs  Operations.hs  Reduction.hs  Types.hs
src/Gauss/Expressions/: Input.hs  Reduction.hs
src/Gauss/Operations/: Addition.hs  Class.hs  Division.hs  Multiplication.hs  Subtraction.hs
src/Gauss/Types/: Int.hs  Integer.hs  Natural.hs
test/: Spec.hs
