name:                gauss
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jgertm/gauss#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Jäger
maintainer:          jger.tm@gmail.com
copyright:           2016 Tim Jäger
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Gauss
  other-modules:       Gauss.Expressions
                     , Gauss.Operations
                     , Gauss.Operations.Addition
                     , Gauss.Operations.Multiplication
                     , Gauss.Types
                     , Gauss.Types.Int
                     , Gauss.Types.Integer
  build-depends:       base >= 4.7 && < 5
                     , bifunctors
                     , classy-prelude
                     , integer-gmp
  default-language:    Haskell2010

executable gauss-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gauss
  default-language:    Haskell2010

test-suite gauss-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gauss
                     , tasty
                     , tasty-smallcheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jgertm/gauss
